Adjust in auto-close, force logout session and checking if the session is active in channel